<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Music Player</string>
    <string name="playlist">Playlist</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="help">Player</string>
    <string name="P1">Playlist Home</string>
    <string name="P2">Playlist Work</string>
    <string name="P3">Playlist Travel</string>
    <string name="PPlus">Add Playlist</string>
    <string name="A1">Rated R</string>
    <string name="A2">Songs for the Deaf</string>
    <string name="A3">Era Vulgaris</string>
    <string name="A4">Lullabies to Paralyze</string>Lullabies to Paralyze
    <string name="S1">This Lullaby</string>
    <string name="S2">Medication</string>
    <string name="S3">Burn the Witch</string>
    <string name="S4">Little Sister </string>
    <string name="S5">Auto Pilot</string>
    <string name="S6">Mexicola</string>
    <string name="S7">You can\'t quit me baby</string>
    <string name="S8">Make It Wit Chu</string>
    <string name="S9">Sick, Sick, Sick</string>
    <string name="S10">Era Vulgaris (Bonus track)</string>
    <string name="S11">No One Knows</string>
    <string name="AR1">Queens of the Stone Age</string>
    <string name="AR2">Kasabian</string>
    <string name="AR3">Mumford and sons</string>
    <string name="exp1">This screen list all the Albums find in device internal storage.</string>
    <string name="exp2">This screen list all the Artists find by the app by reading the metadata in the music files.</string>
    <string name="exp3">In this screen users can play, pause, FF, rewind the song.\nThe app use MediaStore.Audio class.</string>
    <string name="exp4">This screen list all the Playlists. User can add new playlist by click on \'Add Playlist\' button (a new screen will be open).</string>
    <string name="exp5">This screen list all the  all the Songs that the app find in device internal storage.\nUsers can start song by clicking on the name.</string>
</resources>
