<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.albums">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/secondList"
            android:drawablePadding="@dimen/drawPadding"
            android:text="@string/exp1" />

        <TextView
            style="@style/secondList"
            android:background="@color/primary_dark"
            android:drawableStart="@drawable/ic_action_album"
            android:drawablePadding="@dimen/drawPadding"
            android:text="@string/A1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horiz_bar"
            android:background="@color/primary" />

        <TextView
            style="@style/secondList"
            android:background="@color/primary_dark"
            android:drawableStart="@drawable/ic_action_album"
            android:drawablePadding="@dimen/drawPadding"
            android:text="@string/A2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horiz_bar"
            android:background="@color/primary" />

        <TextView
            style="@style/secondList"
            android:background="@color/primary_dark"
            android:drawableStart="@drawable/ic_action_album"
            android:drawablePadding="@dimen/drawPadding"
            android:text="@string/A3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horiz_bar"
            android:background="@color/primary" />

        <TextView
            style="@style/secondList"
            android:background="@color/primary_dark"
            android:drawableStart="@drawable/ic_action_album"
            android:drawablePadding="@dimen/drawPadding"
            android:text="@string/A4" />
    </LinearLayout>
</ScrollView>
